Custom slideover CSS

--- a/site/training/validator-fundamentals/running-data-quality-tests.qmd
+++ b/site/training/validator-fundamentals/running-data-quality-tests.qmd
@@ -140,28 +140,25 @@ Our series of four introductory notebooks for model validators include sample co
 <br>
 
 ::: {.f4 .pl3 .pr3 .embed}
-In this second module, we'll run through **2 — Start the model validation process** together. 
+In this second module, we'll run through **2 — Start the model validation process** together.
 :::
 
 :::
+
 ::::
 
 Let's continue our journey with **2 — Start the model validation process** on the next page. {{< fa hand-point-right >}}
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/2-start_validation_process.html" background-interactive="yes" data-preload="yes"}
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
+:::: {.slideover--r .three-quarters}
 **2 — Start the model validation process**
 
-::: {.f6}
 During this course, we'll run through these notebooks together, and at the end of your learning journey you'll have a fully supported sample validation report ready for review.
-
-:::
 
 For now, **scroll through this notebook** to explore. When you are done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
-
 
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
 
@@ -169,21 +166,16 @@ For now, **scroll through this notebook** to explore. When you are done, click [
 
 ## {background-iframe="/developer/model-testing/test-descriptions.html" background-interactive="true" data-preload="yes"}
 
-::: footer
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.slideover--l .three-quarters .auto-collapse-5}
 **{{< var vm.product >}} test repository**
 
-::: {.f5}
 {{< var vm.product >}} provides a wealth out-of-the-box of tests to help you ensure that your model is being built appropriately.
 
 In this module, you'll become familiar with the individual tests available in {{< var vm.product >}}, as well as how to run them and change parameters as necessary.
 
-:::
-
 For now, **scroll through these test descriptions** to explore. When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
-:::
 
 ## Get your code snippet
 
@@ -233,16 +225,13 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/2-start_validation_process.html#initialize-the-validmind-library" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Connect to your model**
 
-::: {.f6}
 With your code snippet copied to your clipboard:
 
 1. Open **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
 2. Run the cell under the **Setting up** section.
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -250,16 +239,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/2-start_validation_process.html#load-the-sample-dataset" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Load the sample dataset**
 
-::: {.f6}
 After you've successfully initialized the {{< var validmind.developer >}}, let's import the sample dataset that was used to develop the dummy champion model:
 
 1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
 2. Run the cell under the **Load the sample dataset** section.
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -267,32 +253,26 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/2-start_validation_process.html#identify-qualitative-tests" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Identify qualitative tests**
 
-::: {.f6}
 Next, we'll use the [`list_tests()` function](/notebooks/EXECUTED/model_validation/1-set_up_validmind_for_validation.ipynb#explore-available-tests){target="_blank"} to pinpoint tests we want to run:
 
 1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
 2. Run all the cells under the Verifying data quality adjustments section: **Identify qualitative tests**
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 ::::
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/2-start_validation_process.html#initialize-the-validmind-datasets" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Initialize {{< var vm.product >}} datasets**
 
-::: {.f6}
 Then, we'll use the [`init_dataset()` function](/validmind/validmind.qmd#init_dataset){target="_blank"} to connect the sample data with a {{< var vm.product >}} `Dataset` object in preparation for running tests:
 
 1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
 2. Run the following cell in the  Verifying data quality adjustments section: **Initialize the {{< var vm.product >}} datasets**
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -305,16 +285,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/2-start_validation_process.html#run-data-quality-tests" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Run data quality tests**
 
-::: {.f6}
 You run individual tests by calling the [`run_test()` function](/validmind/validmind/tests.qmd#run_test){target="_blank"} provided by the `validmind.tests` module:
 
 1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
 2. Run all the cells under the Verifying data quality adjustments section: **Run data quality tests**
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -322,16 +299,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/2-start_validation_process.html#remove-highly-correlated-features" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Remove highly correlated features**
 
-::: {.f6}
 You can utilize the output from a ValidMind test for further use, for example, if you want to remove highly correlated features:
 
 1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
 2. Run all the cells under the Verifying data quality adjustments section: **Remove highly correlated features**
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -367,15 +341,13 @@ Every test result returned by the `run_test()` function has a `.log()` method th
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/2-start_validation_process.html#configure-and-run-comparison-tests" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Configure and run comparison tests**
 
-::: {.f6}
 You can leverage the {{< var validmind.developer >}} to easily run comparison tests, between both datasets and models. Here, we compare the original raw dataset and the final preprocessed dataset, then log the results to the {{< var validmind.platform >}}:
 
 1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
 2. Run all the cells under the Documenting test results section: **Configure and run comparison tests**
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
@@ -383,16 +355,13 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/2-start_validation_process.html#log-tests-with-unique-identifiers" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Log tests with unique identifiers**
 
-::: {.f6}
 When running individual tests, you can use a custom `result_id` to tag the individual result with a unique identifier:
 
 1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
 2. Run the cell under the following Documenting test results section:  **Log tests with unique identifiers**.
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
