Validation Fundamentals - slideovers

--- a/site/training/developer-fundamentals/implementing-custom-tests.qmd
+++ b/site/training/developer-fundamentals/implementing-custom-tests.qmd
@@ -438,7 +438,7 @@ With the custom test results logged, let's head to the model we connected to at 
 **Insert custom test-driven blocks**
 :::
 
-1. Select the model you connected to earlier.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
 3. Locate the Data Preparation section and click on **3.2 Model Evaluation** to expand that section.
 4. Hover under the Pearson Correlation Matrix content block until a horizontal dashed line with a **{{< fa plus >}}** button appears, indicating that you can insert a new block.
