--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -318,14 +318,14 @@ Try it **live** on the next page. {{< fa hand-point-right >}}
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--b .three-quarters .auto-collapse-10}
+:::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
 **Verify the documentation template**
 :::
 
 Once you've called `preview_template()`:
 
-1. Select the name of your model to open up the model details page.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
 3. Note how the structure of the Document Overview reflects the previewed template.
 
