--- a/site/training/validator-fundamentals/finalizing-validation-reports.qmd
+++ b/site/training/validator-fundamentals/finalizing-validation-reports.qmd
@@ -192,16 +192,15 @@ For example:
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Add & edit content blocks**
-
-::: {.f6}
-Within your **{{< fa shield >}} Validation Report**:
-
-1. Click on **1. Executive Summary** to add and edit a content block.
-2. Click on **2.2.1. Data Quality** to edit the description for the linked Class Imbalance Assessment test results.
-
 :::
+
+1. Select the name of your model you registered for this course to open up the model details page.
+2. On the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
+3. Click on **1. Executive Summary** to add and edit a content block.
+4. Click on **2.2.1. Data Quality** to edit the description for the linked Class Imbalance Assessment test results.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -256,13 +255,14 @@ In the same Class Imbalance Assessment sub-section, above the Risk Assessment No
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Add your compliance assessments**
-
-::: {.f6}
-Within your **{{< fa shield >}} Validation Report**, click on **2.2.1. Data Quality** to assess compliance for the Class Imbalance Assessment sub-section.
-
 :::
+
+1. Select the name of your model you registered for this course to open up the model details page.
+2. On the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
+3. Click on **2.2.1. Data Quality** to assess compliance for the Class Imbalance Assessment sub-section.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -314,13 +314,14 @@ Along with adding findings directly via validation reports, you can also add fin
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Add a finding via overview**
-
-::: {.f6}
-Within the model's **{{< fa book-open >}} Documentation**, click **{{< fa plus >}} Add Finding** to add a finding from the overview.
-
 :::
+
+1. Select the name of your model you registered for this course to open up the model details page.
+2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
+3. Click **{{< fa plus >}} Add Finding** to add a finding from the overview.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -328,13 +329,14 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Add a finding via section**
-
-::: {.f6}
-Within the model's **{{< fa book-open >}} Documentation**, click on any section heading to expand and add a finding to that section via the **{{< var vm.product >}} Insights™** panel.
-
 :::
+
+1. Select the name of your model you registered for this course to open up the model details page.
+2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
+3. Click on any section heading to expand and add a finding to that section via the **{{< var vm.product >}} Insights™** panel.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -379,15 +381,15 @@ Along with model-specific findings, you can also view and filter a list of findi
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Update a model finding**
+:::
 
-::: {.f6}
-1. From the **{{< fa cubes >}} Inventory**, select the name the model you registered to open up the model details page.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. In the left sidebar that appears for your model, click **{{< fa triangle-exclamation >}} Model Findings**.
 3. Select one of the findings you logged during this course, and make some changes to any of the fields.
 4. When you are finished editing, set the finding **[status]{.smallcaps}** to `Closed`.
-:::
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -395,12 +397,12 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ## {background-iframe="https://app.prod.validmind.ai/model-findings" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
-**View all {{< fa triangle-exclamation >}} Model Findings** 
-
-::: {.f6}
-Filter this list to include only findings you want to see, or toggle visibilty for column headers.
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**View all {{< fa triangle-exclamation >}} Model Findings**
 :::
+
+Filter this list to include only findings you want to see, or toggle visibilty for column headers.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -450,15 +452,15 @@ To transition through the approval workflow, all required workflow steps must be
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Submit for approval**
+:::
 
-::: {.f6}
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. Locate the **[model status]{.smallcaps}** section.
 3. Open up the status transition panel, enter your **[notes]{.smallcaps}** and any other additional inventory fields, then click **Submit**.
 
-:::
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -501,13 +503,14 @@ Have a question about the model? Collaborate with your developer right in the mo
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Comment on a text block**
-
-::: {.f6}
-**In the content block you added earlier** within your **{{< fa shield >}} Validation Report**: Post a comment, reply to it, and then resolve the thread.
-
 :::
+
+1. Select the name of your model you registered for this course to open up the model details page.
+2. On the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
+3. **In the content block you added earlier**: Post a comment, reply to it, and then resolve the thread.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -542,15 +545,14 @@ Track changes & updates
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Review model activity**
-
-::: {.f6}
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. In the left sidebar that appears for your model, click **{{< fa wifi >}} Model Activity**.
-3. Filter the following activity: **Comments** | **Status Updates** | **Model Updates** | **Test Results**
-
 :::
+
+1. Select the name of your model you registered for this course to open up the model details page.
+2. In the left sidebar that appears for your model, click **{{< fa wifi >}} Model Activity**.
+3. Filter the following activity: <br>**Comments** | **Status Updates** | **Model Updates** | **Test Results**
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
@@ -560,15 +562,13 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ## {background-iframe="https://app.prod.validmind.ai/analytics" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+:::: {.slideover--l .three-quarters .auto-collapse-10}
 **Welcome to {{< fa square-poll-vertical >}} Analytics**
 
-::: {.f6}
 Here, you can find executive summaries, track information on models, findings, and more. For example:
 
 1. Click **Findings** to review reports on findings.
 3. Click into any widget to review the findings reported by that widget.
-:::
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
