--- a/site/training/validator-fundamentals/running-data-quality-tests.qmd
+++ b/site/training/validator-fundamentals/running-data-quality-tests.qmd
@@ -417,38 +417,38 @@ While the example below focuses on a specific test result, you can follow the sa
 :::
 
 :::
-::::
 
+::::
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory/" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
 **Link validator evidence**
-
-::: {.f6}
-Within your **{{< fa shield >}} Validation Report**: 2.2.1. Data Quality — **ValidMind Data Validation Class Imbalance** {{< fa chevron-right >}} **Link Evidence to Report**
-
 :::
+
+1. Select the name of your model you registered for this course to open up the model details page.
+2. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
+3. Locate the Data Preparation section and click on **2.2.1. Data Quality** to expand that section.
+4. Under the Class Imbalance Assessment section, locate Validator Evidence then click **Link Evidence to Report**.
+5. Select the Class Imbalance test results we logged: **ValidMind Data Validation Class Imbalance**
+6. Click **Update Linked Evidence** to add the test results to the validation report.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-
 # Prepare datasets for model evaluation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/2-start_validation_process.html#split-the-preprocessed-dataset" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
+:::: {.slideover--r .three-quarters}
 **Split the preprocessed dataset**
 
-::: {.f6}
 So far, we've rebalanced our raw dataset and used the results of {{< var vm.product >}} tests to additionally remove highly correlated features from our dataset. Next, let's now spilt our dataset into train and test in preparation for model evaluation testing:
 
 1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
 2. Run all the cells under the **Split the preprocessed dataset** section.
-
-:::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
 
