--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -400,7 +400,7 @@ With the test results logged, let's head to the model we connected to at the beg
 **Insert a test-driven block**
 :::
 
-1. Select the model you connected to earlier.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
 3. Locate the Data Preparation section and click on **2.3 Correlations and Interactions** to expand that section.
 4. Hover under the Pearson Correlation Matrix content block until a horizontal dashed line with a **{{< fa plus >}}** button appears, indicating that you can insert a new block.
