--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -167,7 +167,7 @@ From here, you can:
 
 - Keep track of your models in the customizable inventory ...
 - Review model documentation submitted by model developers ...
-- Assess the compliance of models by logging findings and test results as <br>evidence on validation reports ...
+- Assess the compliance of models by logging findings and test results as evidence on validation reports ...
 - View analytics on your models and findings, and create custom reports ...
 - ... and much more!
 
@@ -208,7 +208,7 @@ For this training course, we'll have you register a dummy model via the **{{< fa
 1. Select the option for a new model:
 - **Documentation template** — <br>`Binary classification`
 - **Use case** — <br>`Attrition/Churn Management`<br><br>
-  You can fill in other options<br> according to your preference.
+  You can fill in other options according to your preference.
 2. Click **{{< fa plus >}} Register Model** to add the model to your inventory.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
@@ -225,7 +225,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 In order to log tests as a validator instead of as a developer, we'll need to adjust your **model stakeholder** permissions:
 
-1. From the **{{< fa cubes >}} Inventory**, select the name the model you registered to open up the model details page.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. Remove yourself as a model owner by clicking on the **[owners]{.smallcaps}** tile, then clicking on the **x** next to your name. Click **Save** to apply your changes to that role.
 3. Remove yourself as a developer by clicking on the **[developers]{.smallcaps}** tile, then clicking on the **x** next to your name. Click **Save** to apply your changes to that role.
 4. Add yourself as a validator by clicking on the **[validators]{.smallcaps}** tile, and selecting your name from the drop-down menu. Click **Save** to apply your changes to that role.
@@ -263,7 +263,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 ::: {.f5}
 {{< var vm.product >}} generates a unique *code snippet* for each registered model to connect with your validation environment:
 
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model to open up the model details page.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. On the left sidebar that appears for your model, click **Getting Started**.
 3. Locate the code snippet and click **Copy snippet to clipboard**.
 
@@ -316,14 +316,14 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--b .three-quarters .auto-collapse-10}
+:::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
 **Verify the report template**
 :::
 
 Once you've called `preview_template()`:
 
-1. From the model inventory, select the name of your model to open up the model details page.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. On the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
 3. Note how the structure of the validation report reflects the previewed template.
 
