--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -186,9 +186,7 @@ When you're done navigating around, click [{{< fa chevron-right >}}]() to contin
 :::: {.slideover--r}
 **Welcome to the {{< fa cubes >}} Inventory**
 
-Use the model inventory to track comprehensive details for all your models throughout the model lifecycle.
-
-The model inventory is customizable and extensible, with a layout that can be configured to suit your needs.
+Use the model inventory to track comprehensive details for all your models throughout the model lifecycle. The model inventory is customizable and extensible, with a layout that can be configured to suit your needs.
 
 ::: {.embed}
 In a usual model lifecycle, a champion model will have been independently registered in your model inventory and submitted to you for validation.
