--- a/site/training/training-templates/course-slides.qmd
+++ b/site/training/training-templates/course-slides.qmd
@@ -336,7 +336,7 @@ Try it **live** on the next page. {{< fa hand-point-right >}}
 ::: {.f5}
 {{< var vm.product >}} generates a unique *code snippet* for each registered model to connect with your developer environment:
 
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model to open up the model details page.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. On the left sidebar that appears for your model, click **Getting Started**.
 3. Locate the code snippet and click **Copy snippet to clipboard**.
 
