--- a/site/training/validator-fundamentals/developing-challenger-models.qmd
+++ b/site/training/validator-fundamentals/developing-challenger-models.qmd
@@ -221,7 +221,7 @@ This is the third notebook in our introductory series, which will walk you throu
 ::: {.f5}
 {{< var vm.product >}} generates a unique *code snippet* for each registered model to connect with your validation environment:
 
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model to open up the model details page.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. On the left sidebar that appears for your model, click **Getting Started**.
 3. Locate the code snippet and click **Copy snippet to clipboard**.
 
@@ -536,7 +536,7 @@ This is the final notebook in our introductory series, which will walk you throu
 ::: {.f4}
 As usual, let's connect back up to your model in the {{< var validmind.platform >}}:
 
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model to open up the model details page.
+1. Select the name of your model you registered for this course to open up the model details page.
 2. On the left sidebar that appears for your model, click **Getting Started**.
 3. Locate the code snippet and click **Copy snippet to clipboard**.
 
